--- a/chat.css
+++ b/chat.css
@@ -1,74 +1,3 @@
-.radio, .textarea-icons-wrapper, .modal-title, .form-group.flex-property.flex-center, div:nth-of-type(1) .modal-header, #sortWebcamtBtn, .watchingMeContainer {
-    position: absolute !important;
-    left: -9999px !important;
-}
-#footer{
- position : absolute !important; 
- bottom : 0px !important;    
-}
-
-#header {
-    display: none!important;
-}
-.open #chatContainer, #chatContainer {
-    height: calc(100vh - 00px) !important;
-}
-div.message img.userItem {
-    height: 30px!important;
-}
-.userItem {
-    font-size: 0.8em;
-}
-div.message div.content {
-    font-size: 0.75em;
-    padding: 4px 10px;
-    margin: 4px 0px;
-}
-
-#tabs{
- height : 86% !important; 
- 
- }
-
-.modal-title{
-color : #000000;
-}
-
-.btn-primary, .slide_block {
-    background-color: #693fcc!important;
-    border-color: #693fcc!important;
-    border: 1px solid #693fcc!important;
-}
-
-.modal-content {
-    background-color: #fff !important;
-    color: #000000 !important;
-}
-
-.form-control {
-    color: #000000!important;
-}
-.btn-default {
-    color: #000000;
-    border: none!important;
-    border-radius: 100px;
-}
-.welcome {
-    background-color: #693fcc;
-    color: #ffffff;
-}
-
-.emojionearea .emojionearea-editor:empty:before {
-    color: #000000!important;
-}
-
-#send-msg-btn {
-    background-color: #693fcc;
-    color: #fff;
-}
-
-.btn-success {
-    background-color: #693fcc;
-    border: 1px solid #693fcc!important;
-    color: #fff!important;
+.bootbox-body:before {
+    content : "Welcome to YERRR : Your-Expressions-Recalibrate-Rational-Reality";  
 }
