--- a/chat.css
+++ b/chat.css
@@ -1,3 +1,3 @@
-.bootbox-body:before {
+.bootbox .bootbox-body:before {
     content : "Welcome to YERRR : Your-Expressions-Recalibrate-Rational-Reality";  
 }
